Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43420

[Windows]: When setting a fixed height to be bigger than the previous fixed height then it will warn about the size not being valid

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.4.1
    • 5.4.0
    • GUI: Window management
    • None
    • Windows 7
    • 5517d1fde55ee3d4601b4a47543d846467b4d267 (qtbase/5.4, 7.1.2015)

      [Windows]: When setting a fixed height to be bigger than the previous fixed height then it will warn about the size not being valid. This is because the minimum size is set first and then it checks the new size against the old maximum which is naturally outside of the constraints.

      The warning comes from QWindowsWindow::setGeometry(const QRect &rectIn).

        1. qtbug43420.zip
          2 kB
          Friedemann Kleint
        2. qtbug43420.zip
          65 kB
          Andy Shaw
        For Gerrit Dashboard: QTBUG-43420
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes