Windows: Remove check for minimum/maximum size constraints.

The warning was triggered when increasing the fixed size of a window.
If there is a real violation of the size constraints, the below
warning will show.

Task-number: QTBUG-43420
Change-Id: I85d7d0a91d040aa3ddeff8c3d105351efd5e14a9
Reviewed-by: Joerg Bornemann <joerg.bornemann@theqtcompany.com>